fix: twitter tweets on safari and circles not respecting overflow

--- a/website/src/components/Header.module.scss
+++ b/website/src/components/Header.module.scss
@@ -46,3 +46,12 @@
     right: 1rem;
   }
 }
+
+@media only screen and (max-width: 600px) {
+  .header {
+    &--links {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+    }
+  }
+}
